--- a/ChatClient/index.html
+++ b/ChatClient/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
+    <title></title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
-    <title>Chat</title>
+    <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
 <body>
-
     <div class="page">
-        <div class="sidebar">sidebar</div>
+        <div class="sidebar">
+        </div>
         <div class="main">
-            <div class="messages">messages</div>
-            <div class="send-message">send message</div>
+            <div class="messages">
+                <div class="message">hi</div>
+                <div class="message">how are you?</div>
+                <div class="message myMessage">zd</div>
+                <div class="message"></div>
+                <div class="message myMessage"></div>
+                <div class="message myMessage"></div>
+                <div class="message"></div>
+                <div class="message"></div>
+            </div>
+            <div class="send-message">
+                <input class="textInput" type="text" name="">
+                <button class="sendButton" onclick="send()">Send</button>
+            </div>
         </div>
     </div>
-
-
     <script src="index.js"></script>
-
 </body>
 
 </html>
