--- a/ChatClient/index.html
+++ b/ChatClient/index.html
@@ -12,17 +12,13 @@
 <body>
     <div class="page">
         <div class="sidebar">
+            <div>
+                username
+                <input type="text" id="username">
+            </div>
         </div>
         <div class="main">
             <div class="messages">
-                <div class="message">hi</div>
-                <div class="message">how are you?</div>
-                <div class="message myMessage">zd</div>
-                <div class="message"></div>
-                <div class="message myMessage"></div>
-                <div class="message myMessage"></div>
-                <div class="message"></div>
-                <div class="message"></div>
             </div>
             <div class="send-message">
                 <input class="textInput" type="text" name="">
